<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Islington"
            android:textSize="30sp"
            android:textColor="#ff000000"
            android:textStyle="bold"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1"
            style="@style/question_label"
            android:drawableLeft="@drawable/open"

            />


        <Spinner
            android:id="@+id/SpinnerAnswers"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:entries="@array/answersTypeList">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q2"
            style="@style/question_label"
            android:drawableLeft="@drawable/hands"

            />

        <Spinner
            android:id="@+id/SpinnerAnswers2"
            android:layout_height="wrap_content"
            android:prompt="@string/S"
            android:layout_width="fill_parent"
            android:entries="@array/answersTypeList">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q3"
            style="@style/question_label"
            android:drawableLeft="@drawable/hug"
            />
        <Spinner
            android:id="@+id/SpinnerAnswers3"
            android:layout_height="wrap_content"
            android:prompt="@string/S"
            android:layout_width="fill_parent"
            android:entries="@array/answersTypeList">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q4"
            style="@style/question_label"
            android:drawableLeft="@drawable/kiss"
            />
        <Spinner
            android:id="@+id/SpinnerAnswers4"
            android:layout_height="wrap_content"
            android:prompt="@string/S"
            android:layout_width="fill_parent"
            android:entries="@array/answersTypeList">
        </Spinner>



        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Story:"
            style="@style/question_label"
            />




        <EditText

            android:id="@+id/story_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="Share your experience..."
            android:inputType="textCapSentences|textMultiLine"
            android:lines="5"/>

        <Button
            android:id="@+id/submitionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT!"
            android:background="@color/magenta"
            android:onClick="subButtonClicked"
            />

    </LinearLayout>
</ScrollView>












